@@ -3,6 +3,7 @@ STR_DOM_MISSIONSTRING_358V
 STR_DOM_MISSIONSTRING_358A
 STR_DOM_MISSIONSTRING_1711_CAS_BOMB_POS
 STR_DOM_MISSIONSTRING_1711_CAS_BOMB_POS_NAPALM
+STR_DOM_MISSIONSTRING_1964
 STR_DOM_MISSIONSTRING_2090
 STR_DOM_MISSIONSTRING_SHOW_HEADSHOTS
 STR_DOM_MISSIONSTRING_CLIENT_ONLY
