@@ -99,6 +99,7 @@ STR_DOM_MISSIONSTRING_1900PATROL
 STR_DOM_MISSIONSTRING_1900MAXGROUPS
 STR_DOM_MISSIONSTRING_1900GROUPSIZE
 STR_DOM_MISSIONSTRING_1932
+STR_DOM_MISSIONSTRING_1964
 STR_DOM_MISSIONSTRING_1983
 STR_DOM_MISSIONSTRING_1985
 STR_DOM_MISSIONSTRING_1993
