@@ -132,6 +132,7 @@ STR_DOM_MISSIONSTRING_1949
 STR_DOM_MISSIONSTRING_1950
 STR_DOM_MISSIONSTRING_1952
 STR_DOM_MISSIONSTRING_1953A
+STR_DOM_MISSIONSTRING_1964
 STR_DOM_MISSIONSTRING_1967
 STR_DOM_MISSIONSTRING_1969
 STR_DOM_MISSIONSTRING_1970
