@@ -122,6 +122,7 @@ STR_DOM_MISSIONSTRING_1894_TELL_ARTY_CAS
 STR_DOM_MISSIONSTRING_1900PATROL
 STR_DOM_MISSIONSTRING_1900MAXGROUPS
 STR_DOM_MISSIONSTRING_1900GROUPSIZE
+STR_DOM_MISSIONSTRING_1964
 STR_DOM_MISSIONSTRING_1965
 STR_DOM_MISSIONSTRING_2007
 STR_DOM_MISSIONSTRING_2007_FPS
