@@ -11,6 +11,7 @@ STR_DOM_MISSIONSTRING_1805_DEFUSE_NOW
 STR_DOM_MISSIONSTRING_EVENTWARNINGTIME
 STR_DOM_MISSIONSTRING_EVENTCIVMASSACRE
 STR_DOM_MISSIONSTRING_EVENTCIVMASSACRE_END
+STR_DOM_MISSIONSTRING_1964
 STR_DOM_MISSIONSTRING_CIV_RESISTANCE
 STR_DOM_MISSIONSTRING_PRISONERSANDEXPLOSIVES_DEFUSE
 STR_DOM_MISSIONSTRING_PRISONERSANDEXPLOSIVES_TRIGGERMAN
