@@ -54,6 +54,7 @@ STR_DOM_MISSIONSTRING_EVENTCIVMASSACRE_END
 STR_DOM_MISSIONSTRING_1900PATROL
 STR_DOM_MISSIONSTRING_1900MAXGROUPS
 STR_DOM_MISSIONSTRING_1900GROUPSIZE
+STR_DOM_MISSIONSTRING_1964
 STR_DOM_MISSIONSTRING_2008
 STR_DOM_MISSIONSTRING_2009
 STR_DOM_MISSIONSTRING_2011
